--- a/新建文本文档.md
+++ b/新建文本文档.md
@@ -11,4 +11,48 @@
 ## 10:“git add .”add加点是所有的文件都提交暂缓区，“git add 路径”，提交部分！
 ## 11：git commit -m “备注”，主要是将暂存区里的改动给提交到本地的版本库。
 ## 12：git push origin 分支名，推送本地分支到远程分支（PS：推送之前最好先更新一遍代码！防止覆盖！！）
-## 全图奉上！
+# linux运行程序在后台
+## 1、运行.sh文件
+直接用./sh文件就可以运行，但是如果想后台运行，即使关闭当前的终端也可以运行的话，就需要nohup和&命令。
+
+### （1） &命令
+功能：加在一个命令的最后，可以把这个命令放在后台执行。
+
+### （2）nohup命令
+功能：不挂断的运行命令
+```go
+nohup ./tesh.sh &
+```
+
+## 2、查看当前后台运行的命令
+有两个命令可以用，jobs和ps，区别是jobs用于查看当前终端后台运行的任务，换了终端就看不到了。而ps命令用于查看瞬间动态进程的动态，可以看到别的终端运行的后台的进程。
+### （1）jobs命令
+功能：查看当前终端后台运行的任务
+```go
+jobs
+```
+jobs -l 选项可显示当前终端所有的任务的PID，jobs的状态可以是running，stopped，Tweminated。+号表示当前任务，-号表示后一个任务。
+
+### （2）ps命令
+功能：查看当前的所有进程
+```go
+ps
+```
+ps -aux | grep "tesh.sh" #a:显示所有的程序 u:以用户为主的格式来显示 x:显示所有程序，不以终端机来区分。
+
+## 3、关闭当前后台运行的命令
+### kill命令：结束进程
+#### （1）通过jobs命令查看jobnum，然后执行 kill %jobnum
+#### （2）通过ps命令查看进程号pid。然后执行 kill %pid
+如果是前台进程的话，直接执行Ctrl +c 就可以终止了。
+
+## 4、前后台进程的切换与控制
+### （1）fg命令
+功能：将后台中的命令调至前台继续执行。
+如果后台中有多个命令，可以先用jobs查看jobnum，然后用 fg %jobnum 将选中的命令调出。
+### （2）Ctrl + z 命令
+功能：讲一个正在前台执行的命令放到后台，并且处于暂停状态
+### （3）bg命令
+功能：将一个在后台暂停的命令，变成在后台继续执行
+如果后台中有多个命令，可以先用jobs查看jobnum，然后用 bg %jobnum 将选中的命令调出继续执行。
+
